--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/server": "^10.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "lucide-react": "^0.338.0",
     "next": "^14.1.0",
     "react": "18.2.0",
