--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "dayjs": "^1.11.10",
     "lucide-react": "^0.338.0",
     "next": "^14.1.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.4.2",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
