--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,4 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
 
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
-# Get the Database URL from the "prisma" dropdown selector in PlanetScale. 
-DATABASE_URL='mysql://YOUR_MYSQL_URL_HERE?sslaccept=strict'
+DATABASE_URL='<DATABASE_URL_HERE>'
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=<NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY_HERE>
+CLERK_SECRET_KEY=<CLERK_SECRET_KEY_HERE>
